# curs_OOP

./: CMakeLists.txt  main.cpp
include/: include.h
libs/bio/: bio_include.h  biometric.cpp  biometric.h
libs/bio/date/: include.h
libs/bio/date/date_of_birth/: dateBirth.cpp  dateBirth.h
libs/bio/date/date_registration/: dateRegistration.cpp  dateRegistration.h
libs/bio/name/: name.cpp  name.h
libs/date/: date.cpp  date.h
libs/human/: human.h
